tests/rosetta/out/Dart/csv-to-html-translation-4.error
run error: exit status 254
../../tests/rosetta/out/Dart/csv-to-html-translation-4.dart:34:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/csv-to-html-translation-4.dart:63:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/csv-to-html-translation-4.dart:68:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/csv-to-html-translation-4.dart:72:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
